src/k8s/base/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fv-deployment
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: fv-web-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: fv-secret
      containers:
        - name: fv-web-app
          image: "gcr.io/four-track-friday-2/fv_web_app"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 60
            timeoutSeconds: 1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 60
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 16Mi
            requests:
              cpu: 1m
              memory: 4Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
