src/k8s/base/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: fv-service
spec:
  type: NodePort
  ports:
    - name: web-node
      port: 80
      targetPort: 80
